samples/_failures_safe/1761128765_1e7126_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85d40a25.c: In function ‘main’:
./samples/SAFE/__tmp_85d40a25.c:138:5: error: expected declaration or statement at end of input
  138 |     if (compressed_size == 0) {
      |     ^~
./samples/SAFE/__tmp_85d40a25.c:138:5: error: expected declaration or statement at end of input
